--- a/app/views/doses/new.html.erb
+++ b/app/views/doses/new.html.erb
@@ -3,6 +3,8 @@
   <%= simple_form_for(@dose, as: :dose, method: :post, url: cocktail_doses_path) do |f| %>
     <%= f.input :description %>
     <%= f.association :ingredient %>
-    <%= f.button :submit %>
+    <%= f.button :submit, class: "btn btn-primary" %>
+    <%= link_to('Back to the list', cocktails_path, class: "btn btn-outline-secondary") %>
   <% end %>
+
 </div>
