--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,21 +1,46 @@
-<div class="container">
-  <h1>Name: <%=@cocktail.name%></h1>
-  <p>Ingredients</p>
+<nav class="navbar navbar-dark bg-dark">
+  <div class="left-navbar">
+    <%= image_tag "main-avatar.jpg", class: "avatar-large" %>
+    <span class = "navbar-brand font-weight-bold">COCKTAIL KIT</span>
+  </div>
+  <div class="right-navbar">
+    <%= link_to('Add a cocktail', new_cocktail_path, class: "btn btn-outline-info") %>
+    <%= link_to('Back to the list', cocktails_path, class: "btn btn-outline-secondary") %>
+  </div>
+</nav>
 
-  <ul>
-    <% @cocktail.doses.each do |dose| %>
-    <li><%= dose.description %> - <%= dose.ingredient.name %>
-    <%= link_to "Remove",
-                  doses_delete_path(dose.id),
-                  method: :delete,
-                  data: { confirm: "Are you sure?" } %>
-                  </li>
-    <% end %>
-  </ul>
-
-
-
-<%= link_to('Add a dose', new_cocktail_dose_path(@cocktail), class: "btn btn-outline-primary") %>
-<%= link_to('Back to the list', cocktails_path, class: "btn btn-outline-secondary") %>
-
+<div class="card-category img-fluid" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), 
+url(https://img.estadao.com.br/fotos/crop/1200x1200/resources/jpg/9/3/1532640931039.jpg)">
+  <h1><%=@cocktail.name%></h1>
 </div>
+
+<div class="container mt-4 text-success bg-light">
+  <div class="row">
+    <div class="col-7">
+      <h3 class=" font-weight-bold">Description</h3>
+      <p class="font-italic">Symbol of Brazilianness, caipirinha is the drink made with lemon, sugar and cachaça.</p>
+    </div>
+    <div class="col-5">
+      <h3 class=" font-weight-bold">Ingredients</h3>
+      <ul class="list-unstyled">
+      <% @cocktail.doses.each do |dose| %>
+      <li><%= dose.description %> - <%= dose.ingredient.name %>
+      <%= link_to "Remove",
+                    doses_delete_path(dose.id),
+                    method: :delete,
+                    data: { confirm: "Are you sure?" } %>
+                    </li>
+      <% end %>
+      <%= link_to('Add an ingredient', new_cocktail_dose_path(@cocktail), class: "btn btn-success mt-3") %>
+      </ul>
+    </div>
+  </div>
+</div>
+
+
+  
+
+
+
+
+
