CSS in progress

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -1,5 +1,5 @@
 .card-category {
-  background-size: cover;
+  // background-size: cover;
   background-position: center;
   height: 320px;
   display: flex;
