setup for hosting and image upload done

--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -33,3 +33,5 @@ url('<%= image_path "main-avatar.jpg" %>')">
   <% end  %>
   </div>
 </div>
+
+<%= cl_image_tag("https://res.cloudinary.com/dezvnyhfh/image/upload/v1606834908/qr7n97ko8qvwtxsbpxav.jpg", width: 400, height: 300, crop: :thumb, gravity: :face) %>
