--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -11,6 +11,7 @@
   
   <%= simple_form_for(@cocktail) do |f| %>
     <%= f.input :name, label: "Nombre del refresco" %>
+    <%= f.input :photo, as: :file %>
     <div class="d-flex justify-content-between">
       <%= f.submit 'Ahorrar', class: "btn btn-primary" %>
       <%= link_to('Volver a la lista', cocktails_path, class: "btn btn-outline-secondary") %>
