--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -10,7 +10,7 @@
 </nav>
 
 <div class="card-category img-fluid" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), 
-url(https://img.estadao.com.br/fotos/crop/1200x1200/resources/jpg/9/3/1532640931039.jpg)">
+url('<%= cl_image_path @cocktail.photo.key, height: 300, width: 400, crop: :fill %>')">
   <h1><%=@cocktail.name%></h1>
 </div>
 
