--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -22,10 +22,10 @@ url('<%= image_path "main-avatar.jpg" %>')">
     <div class="col-4 mb-2">
       <div class="card">
         <% if cocktail.photo.attached?%>
-          <div class="background-image" style="height: 240px; background-image: url('<%= cl_image_path cocktail.photo.key, height: 300, width: 400, crop: :fill %>')">
+          <div class="background-image" style="height: 300px; background-image: url('<%= cl_image_path cocktail.photo.key, height: 300, width: 400, crop: :fill %>')">
           </div>
         <% else %>
-          <div class="background-image" style="height: 240px; background-image: url('<%= image_path "main-avatar.jpg", height: 300, width: 400, crop: :fill %>')">
+          <div class="background-image" style="opacity: 40%; height: 300px; background-image: url('<%= image_path "main-avatar.jpg", height: 300, width: 400, crop: :fill %>')">
           </div>
         <% end %>
         <div class="card-body bg-light">
