--- a/app/views/doses/new.html.erb
+++ b/app/views/doses/new.html.erb
@@ -1,10 +1,15 @@
 <div class="container">
-  <h1><%= @cocktail.name %></h1>
-  <%= simple_form_for(@dose, as: :dose, method: :post, url: cocktail_doses_path) do |f| %>
-    <%= f.input :description %>
-    <%= f.association :ingredient %>
-    <%= f.button :submit, class: "btn btn-primary" %>
-    <%= link_to('Back to the list', cocktails_path, class: "btn btn-outline-secondary") %>
-  <% end %>
+  <div class="row mb-3" style="opacity: 40%; height: 420px; background-image: url('<%= image_path "main-avatar.jpg", height: 420, width: 400, crop: :fill %>')">">
+    <div class="col-12">
+      <h1 class="d-flex justify-content-center" style="font-size: 80px;"><%= @cocktail.name %></h1>
+    </div>
+  </div>
 
+<div>  
+  <%= simple_form_for(@dose, as: :dose, method: :post, url: cocktail_doses_path) do |f| %>
+    <%= f.input :description, label: "Descripción" %>
+    <%= f.association :ingredient, label: "Ingrediente" %>
+    <%= f.button :submit, class: "btn btn-primary" %>
+    <%= link_to('Volver a la lista', cocktails_path, class: "btn btn-outline-secondary") %>
+  <% end %>
 </div>
