mister cocktail with a description for the cocktail

--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -32,7 +32,7 @@
       <div class="col-7">
         <div class="bg-light p-3">
           <h3 class=" font-weight-bold">Descripción</h3>
-          <p class="font-italic">Refresco de limón, que sabe a tamarindo pero es naranja</p>
+          <p class="font-italic"><%= @cocktail.description %></p>
         </div>
       </div>
       <div class="col-5">
