--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -17,6 +17,7 @@
 <div>  
   <%= simple_form_for(@cocktail) do |f| %>
     <%= f.input :name, label: "Nombre del refresco" %>
+    <%= f.input :description, label: "Descripción" %>
     <%= f.input :photo, as: :file %>
     <div class="d-flex justify-content-between">
       <%= f.submit 'Ahorrar', class: "btn btn-primary" %>
