--- a/app/views/doses/new.html.erb
+++ b/app/views/doses/new.html.erb
@@ -19,7 +19,7 @@
     <div class="row mb-3">
       <div class="col-12">
         <div class="d-flex justify-content-center align-items-center" style="opacity: 40%; height: 420px; background-size: cover; background-image: url('<%= image_path "main-avatar.jpg", height: 420, width: 1080, crop: :fill %>')">
-          <h1 style="font-size: 80px;">Danos tu opinion</h1>
+          <h1 style="font-size: 80px;"><%= @cocktail.name %></h1>
         </div>
       </div>
     </div>
